2011-04-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	Preserve arg names for advice of subr and lexical functions (bug#8457).
	* help-fns.el (help-function-arglist): Consolidate the subr and
	new-byte-code cases.  Add argument `preserve-names' to extract names
	from the docstring when needed.
	* emacs-lisp/advice.el (ad-define-subr-args, ad-undefine-subr-args)
	(ad-subr-args-defined-p, ad-get-subr-args, ad-subr-arglist): Remove.
	(ad-arglist): Use help-function-arglist's new arg.
	(ad-definition-type): Use cond.

2011-04-13  Juanma Barranquero  <lekktu@gmail.com>

	* autorevert.el (auto-revert-handler):
	Bind `remote-file-name-inhibit-cache', not `tramp-cache-inhibit-cache',
	which was removed in 2010-10-02T13:21:43Z!michael.albinus@gmx.de.
	Don't quote lambda.

	* image-mode.el (image-transform-set-scale):
	Fix change in 2011-04-09T20:28:01Z!cyd@stupidchicken.com.

2011-04-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* net/network-stream.el (network-stream-open-starttls): Only do
	opportunistic STARTTLS upgrades if we have built-in gnutls support.
	Upgrades via gnutls-cli are too slow to be done opportunistically.

2011-04-12  Juanma Barranquero  <lekktu@gmail.com>

	* dframe.el (dframe-current-frame): Remove spurious quote.

2011-04-12  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-tex.el (cal-tex-end-document):
	Try to automatically use latin1 input if needed.

	* calendar/cal-hebrew.el (diary-hebrew-rosh-hodesh):
	Don't try to cons a mark onto an empty element.

2011-04-11  Leo Liu  <sdl.web@gmail.com>

	* ido.el (ido-buffer-internal): Allow method 'kill for virtual
	buffers.
	(ido-kill-buffer-at-head): Support killing virtual buffers.

2011-04-10  Chong Yidong  <cyd@stupidchicken.com>

	* minibuffer.el (completion-show-inline-help): New var.
	(completion--do-completion, minibuffer-complete)
	(minibuffer-force-complete, minibuffer-complete-word): Inhibit
	minibuffer messages if completion-show-inline-help is nil.
